--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10490,6 +10490,14 @@ a.text-dark:focus {
   }
 }
 
+nav {
+  margin-bottom: 50px;
+}
+
+.card {
+  margin-bottom: 25px;
+}
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
